Development:
  - add f_block_1_root and f_block_2_root to t_proposer_slashings table
  - make log level configuration hierarchical; if a log level is not present it will use the next one up the hierarchy
  - add t_chain_spec table, holding the chain specification
  - add t_genesis table, holding the chain genesis information
  - add t_deposits table, holding Ethereum 1 deposits recognized on the beacon chain and provided in the beacon block
  - t_validators table no longer uses '-1' as an indicator for the Ethereum spec value `FAR_FUTURE_EPOCH`, instead it uses NULL
  - add upgrader to update the database schema when changes are made