@@ -172,6 +172,30 @@ CREATE TABLE t_deposits (
 );
 CREATE UNIQUE INDEX i_deposits_1 ON t_deposits(f_inclusion_slot,f_inclusion_block_root,f_inclusion_index);
 
+-- t_eth1_deposits stores information about each Ethereum 1 deposit that has occurred for the deposit contract.
+DROP TABLE IF EXISTS t_eth1_deposits CASCADE;
+CREATE TABLE t_eth1_deposits (
+  f_eth1_block_number      BIGINT NOT NULL
+ ,f_eth1_block_hash        BYTEA NOT NULL
+ ,f_eth1_block_timestamp   TIMESTAMPTZ NOT NULL
+ ,f_eth1_tx_hash           BYTEA NOT NULL
+ ,f_eth1_log_index         BIGINT NOT NULL
+ ,f_eth1_sender            BYTEA NOT NULL
+ ,f_eth1_recipient         BYTEA NOT NULL
+ ,f_eth1_gas_used          BIGINT NOT NULL
+ ,f_eth1_gas_price         BIGINT NOT NULL
+ ,f_deposit_index          BIGINT UNIQUE NOT NULL
+ ,f_validator_pubkey       BYTEA NOT NULL
+ ,f_withdrawal_credentials BYTEA NOT NULL
+ ,f_signature              BYTEA NOT NULL
+ ,f_amount                 BIGINT NOT NULL
+);
+CREATE UNIQUE INDEX i_eth1_deposits_1 ON t_eth1_deposits(f_eth1_block_hash, f_eth1_tx_hash, f_eth1_log_index);
+CREATE INDEX i_eth1_deposits_2 ON t_eth1_deposits(f_validator_pubkey);
+CREATE INDEX i_eth1_deposits_3 ON t_eth1_deposits(f_withdrawal_credentials);
+CREATE INDEX i_eth1_deposits_4 ON t_eth1_deposits(f_eth1_sender);
+CREATE INDEX i_eth1_deposits_5 ON t_eth1_deposits(f_eth1_recipient);
+
 -- t_validator_balances contains per-epoch balances.
 DROP TABLE IF EXISTS t_validator_balances CASCADE;
 CREATE TABLE t_validator_balances (
